* FHCCOverviewControl.cs: * DatabaseHelpers.cs: * SpectrumServicesController.cs:
* FHCC_Overview.cshtml: updated since may 3 US time

--- a/Views/SpectrumServices/FHCC_Overview.cshtml
+++ b/Views/SpectrumServices/FHCC_Overview.cshtml
@@ -18,11 +18,11 @@
     <tbody>
         <tr>
             <th scope="row">Boxes sold (this day): </th>
-            <td>@Model.fhccBoxesSoldDaily</td>
+            <td>@Model.FhccBoxesSoldDaily</td>
         </tr>
         <tr>
             <th scope="row">Boxes sold (this month): </th>
-            <td>@Model.fhccBoxesSoldDaily</td>
+            <td>@Model.FhccBoxesSoldDaily</td>
         </tr>
        
     </tbody>
